src/features/Breadcrumbs/Breadcrumbs.module.scss
@import "@var";
@import "@mixin";

.breadcrumbsContainer {
  margin-top: 10px;
  margin-bottom: 55px;
  width: 100%;
  display: flex;
  align-items: center;
  gap: 5px;

  @include tablet {
    gap: 50px;
    margin-bottom: 30px;
  }
  @include mobile {
    gap: 50px;
    margin-bottom: 30px;
  }
}

.crumbText {
  color: $colorGray200;
}

.breadcrumbsContainer a:last-of-type > p {
  color: white;
}

